# Paylink

./: Makefile  README.md
anchor/: Anchor.toml  README.md
anchor/programs/paylink/: Cargo.toml
anchor/programs/paylink/src/: lib.rs
api/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
api/src/: index.ts
api/src/db/: client.ts  schema.sql  supabase-client.ts
api/src/idl/: paylink.json
api/src/routes/: actions.routes.ts  cross-chain.routes.ts  invoices.routes.ts  offramp.routes.ts  paylinks.routes.ts  payments.routes.ts  payroll.routes.ts  reputation.routes.ts  users.routes.ts
api/src/services/: cross-chain.service.ts  invoices.service.ts  offramp.service.ts  paylinks.service.ts  payroll.service.ts  scheduler.service.ts  solana.service.ts  users.service.ts
api/src/utils/: csv.ts  health-worker.ts
api/supabase/: config.toml
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/docs/: page.tsx
frontend/app/onboard/: page.tsx
frontend/components/: BrandLogo.tsx  CopyValueButton.tsx  CrossChainPaymentForm.tsx  GetStartedButton.tsx  IconPicker.tsx  Navbar.tsx  OffRampModal.tsx  PaymentForm.tsx  QRCodeDisplay.tsx  ReputationBadge.tsx  UserAvatar.tsx  UserReputationDisplay.tsx  WalletConnectButton.tsx
frontend/hooks/: useRecentTransactions.ts  useSolanaBalance.ts
frontend/lib/: api.ts  format.ts  onboarding-storage.ts  solana-payments.ts
frontend/providers/: Providers.tsx
(+20 files in other folders)
